update gradle to kotlin dsl